--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
     "batch": "^0.6.1",
+    "bcryptjs": "^3.0.2",
     "bfj": "^7.1.0",
     "big.js": "^5.2.2",
     "binary-extensions": "^2.3.0",
@@ -779,6 +780,7 @@
     "supports-preserve-symlinks-flag": "^1.0.0",
     "svg-parser": "^2.0.4",
     "svgo": "^1.3.2",
+    "swagger-ui-express": "^5.0.1",
     "symbol-tree": "^3.2.4",
     "tailwindcss": "^3.4.17",
     "tapable": "^2.2.1",
