--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
     "batch": "^0.6.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "bfj": "^7.1.0",
     "big.js": "^5.2.2",
@@ -502,6 +503,7 @@
     "minimist": "^1.2.8",
     "minipass": "^7.1.2",
     "mkdirp": "^0.5.6",
+    "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "mssql": "^11.0.1",
     "multicast-dns": "^7.2.5",
