--- a/package.json
+++ b/package.json
@@ -678,6 +678,7 @@
     "readdirp": "^3.6.0",
     "recursive-readdir": "^2.2.3",
     "redent": "^3.0.0",
+    "redis": "^5.5.6",
     "reflect.getprototypeof": "^1.0.10",
     "regenerate": "^1.4.2",
     "regenerate-unicode-properties": "^10.2.0",
